Correct Coderplex Spelling

--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@ There will be a conjoining of entrepreneurs, professionals, creative designers, 
 <br>
 As always, we have an awesome list of <strong>speakers</strong>, <strong>mentors</strong>, participants (you), <strong>prizes </strong>and <strong>great food</strong>. Join us for another action-packed&nbsp;weekend. (details are on our events page)<br>
 <br>
-We have something special for <strong>CoderPlex!</strong> As a member,&nbsp;you can use the code "<strong>SWCODERPLEX</strong>" to get a <strong>40%&nbsp;off </strong>the ticket price. There are limited tickets, and the discount will be reduced with time!<br>
+We have something special for <strong>Coderplex!</strong> As a member,&nbsp;you can use the code "<strong>SWCODERPLEX</strong>" to get a <strong>40%&nbsp;off </strong>the ticket price. There are limited tickets, and the discount will be reduced with time!<br>
 <br>
 <strong>Date:&nbsp;25th&nbsp;May 2018,&nbsp;Friday 17:30 PM - &nbsp;27<sup>th</sup>&nbsp;May 2018, Sunday 7:00 PM</strong><br>
 <br>
